[project]
name = "vbank"
version = "0.1.2"
description = "SAT vocabulary bank - save unknown words with definitions, synonyms, and Chinese translations"
readme = "README.md"
license = {text = "MIT"}
authors = []
requires-python = ">=3.10"
dependencies = ["textual>=8.0.0"]

[project.scripts]
vbank = "vbank:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
